--- a/pom.xml
+++ b/pom.xml
@@ -46,22 +46,30 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+             
     </dependencies>
 
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <excludes>
-                        <exclude>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                        </exclude>
-                    </excludes>
-                </configuration>
-            </plugin>
+        <plugin>
+             <groupId>org.springframework.boot</groupId>
+             <artifactId>spring-boot-maven-plugin</artifactId>
+             <configuration>
+                 <executable>true</executable>
+             </configuration>
+         </plugin>
+         <plugin>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-maven-plugin</artifactId>
+         <configuration>
+           <excludes>
+               <exclude>
+                   <groupId>org.projectlombok</groupId>
+                   <artifactId>lombok</artifactId>
+               </exclude>
+           </excludes>
+         </configuration>
+         </plugin>
         </plugins>
     </build>
 
