--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
              <artifactId>spring-boot-maven-plugin</artifactId>
              <configuration>
                  <executable>true</executable>
-<!--                  <mainClass>com.example.watermarktopdf.WatermarkToPdfApplication</mainClass> -->
+                 <mainClass>com.example.watermarktopdf.WatermarkToPdfApplication</mainClass>
                  <start-class>com.example.watermarktopdf.WatermarkToPdfApplication</start-class>
              </configuration>
          </plugin>
